# dnd-scheduler-bot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  DOCKER.md  Dockerfile  README.md  ROADMAP.md  VISION.md  clippy.toml  docker-compose.yml  nginx.conf
migrations/: 001_initial.sql  20241127000005_create_reminders.sql  20241127000006_add_performance_indexes.sql
src/: config.rs  lib.rs  main.rs
src/bot/: mod.rs
src/bot/commands/: list.rs  mod.rs  reminders.rs  schedule.rs  session_management.rs  settings.rs  stats.rs
src/bot/handlers/: callback.rs  general_message.rs  message.rs  mod.rs
src/database/: connection.rs
src/database/models/: group.rs  mod.rs  reminder.rs  response.rs  session.rs
src/services/: health.rs  mod.rs  notifications.rs  reminder.rs  scheduler.rs  timezone.rs
src/utils/: datetime.rs  feedback.rs  logging.rs  markdown.rs  mod.rs  validation.rs
tests/: bot_handlers_integration_tests.rs  callback_handler_tests.rs  command_parsing_tests.rs  config_tests.rs  database_tests.rs  dialogue_storage_tests.rs  feedback_system_tests.rs  integration_test.rs  reminder_tests.rs  session_management_tests.rs  validation_tests.rs
